--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="forecast_menu">Forecast</string>
     <string name="alert_dialog_ok">ok</string>
     <string name="alert_dialog_cancel">cancel</string>
-    <string name="dialog_title">Select your city</string>
+    <string name="dialog_title">Find your city</string>
+    <string name="city_hint">City name</string>
 </resources>
