--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="error_title">Sorry!</string>
     <string name="error">Something went wrong!</string>
     <string name="try_again">try again</string>
+    <string name="temperature_title">Temperature</string>
 </resources>
