--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="error">Something went wrong!</string>
     <string name="try_again">try again</string>
     <string name="temperature_title">Temperature</string>
+    <string name="dialog_limit_title">Warning</string>
+    <string name="dialog_limit_message">You can\'t delete all cities. You must keep one :)</string>
 </resources>
