Change errorFragment to error view inside homeFragment. Correct layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="dialog_title">Find your city</string>
     <string name="city_hint">City name</string>
     <string name="error_title">Sorry!</string>
-    <string name="error">Something went wrong!</string>
+    <string name="error">Something went wrong!\nCheck the network connection!</string>
     <string name="try_again">try again</string>
     <string name="temperature_title">Temperature</string>
     <string name="dialog_limit_title">Warning</string>
